# Physic-Vis

./: .gitignore  AGENTS.md  Dockerfile.manim  Dockerfile.v018  README.md  batch_statistics.json  debug_manim.html  debug_renderer.py  dev.nix  force_physics.py  install_pinecone_ref.py  potential_energy.py  pyproject.toml
src/: main.py
src/api/: server.py
src/core/: config.py  llm.py
src/execution/: batch_generator.py  layout_helper.py  local_runner.py  spatial_auto_fix.py  spatial_validator.py  visual_validator.py
src/graph/: state.py  workflow.py
src/graph/nodes/: architect.py  coder.py  healer.py  physicist.py  renderer.py
src/knowledge/: error_kb.py  generate_comprehensive_physics.py  ingest_manim.py  ingest_physics.py
src/knowledge/data/: comprehensive_physics.json  physics_formulas.json
src/knowledge/data/errors/: error_log.jsonl
tests/: test_api.py  test_error_kb.py  test_llm.py  test_rag.py  verify_batch_runner.py  verify_physics_rag.py
